--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -11,7 +11,7 @@
 	cursor: pointer;
 	padding: 5px 10px;
 	margin-bottom: 10px;
-	background-color: #11afa8;
+	background-color: #014c49;
 }
 .profile-table button{
     text-align: center;
@@ -136,7 +136,7 @@ input[type=text], input[type=password], input[type=number], input[type=tel],inpu
   text-decoration: none;
   color: #fff;
   border: 2px solid #052026;
-  background-color:rgba(0,0,255,0.3);
+  background-color:rgb(90, 91, 91);
   font-size: 20px;
   display: inline-block;
   border-radius: 0.3em;
@@ -161,7 +161,7 @@ input[type=text], input[type=password], input[type=number], input[type=tel],inpu
   transition: none;
 }
 .button:hover {
-  background-color: #35cff2;
+  background-color: rgb(0, 3, 15);
   color: #fff;
   border-bottom: 4px solid #1977b5;
 }
